--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="js/codemirror/codemirror.css" />
     <link rel="stylesheet" href="js/toastr/toastr.min.css" />
     <link rel="stylesheet" href="css/style.css" />
+    
+    <title>AgileSQL</title>
   </head>
   <body ng-controller="MainController as main">
     <div class="ui-layout-west">
