--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -169,6 +169,7 @@
     <script src="js/codemirror/codemirror.js"></script>
     <script src="js/codemirror/sql.js"></script>
     <script src="js/toastr/toastr.min.js"></script>
+    <script src="js/blockui/jquery.blockUI.js"></script>
     <script src="js/app/app.js"></script>
   </body>
 </html>
