--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -20,7 +20,7 @@
     <div class="ui-layout-west">
       <div>
         <div class="form-group">
-          <button class="btn btn-link" ng-click="showConfiguration = !showConfiguration">Configuration</button>
+          <button class="btn btn-link btn-block" ng-click="showConfiguration = !showConfiguration">Configuration</button>
         </div>
         <div ng-show="showConfiguration">
           <div class="form-group">
@@ -106,7 +106,7 @@
         
         <div class="col-xs-2">
           <button class="btn btn-default btn-block" ng-click="exportCsv()" ng-disabled="main.change">
-            <span class="glyphiconglyphicon-download-alt"></span>
+            <span class="glyphicon glyphicon-download-alt"></span>
             CSV
           </button>
         </div>
