--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -72,7 +72,10 @@
         <hr>
         
         <div class="list-group cursor" ng-controller="SqlSelectionListController">
-          <a class="list-group-item break-all" ng-repeat="sql in main.sqls | filter:{title:main.sqlFilter} | orderBy:'title'" ng-click="selectSql(sql)">
+          <a class="list-group-item break-all"
+             ng-class="{'list-group-item-info': (sql.id === main.sql.id)}"
+             ng-repeat="sql in main.sqls | filter:{title:main.sqlFilter} | orderBy:'title'"
+             ng-click="selectSql(sql)">
             {{sql.title}}
           </a>
         </div>
