--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -115,7 +115,7 @@
         <div class="col-xs-2">
           <button class="btn btn-default btn-block" ng-click="exportCsv()" ng-disabled="main.change">
             <span class="glyphicon glyphicon-download-alt"></span>
-            CSV
+            TSV
           </button>
         </div>
         
